--- a/package.json
+++ b/package.json
@@ -1,35 +1,33 @@
 {
-  "name": "wedding_planner",
-  "version": "0.1.0",
-  "private": true,
+  "name": "wedding_planner_wa_backend",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "dependencies": {
-    "bootstrap": "^5.3.8",
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
-  },
-  "description": "## Project setup ``` npm install ```",
-  "main": "babel.config.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lorenbazon96/Weeding_Planner_wa_frontend.git"
+    "url": "git+https://github.com/lorenbazon96/Wedding_Planner_wa_backend.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/lorenbazon96/Weeding_Planner_wa_frontend/issues"
+    "url": "https://github.com/lorenbazon96/Wedding_Planner_wa_backend/issues"
   },
-  "homepage": "https://github.com/lorenbazon96/Weeding_Planner_wa_frontend#readme"
+  "homepage": "https://github.com/lorenbazon96/Wedding_Planner_wa_backend#readme",
+  "description": "",
+  "type": "module",
+  "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "cors": "^2.8.6",
+    "dotenv": "^17.3.1",
+    "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
+  }
 }
