--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.13.5",
     "bootstrap": "^5.3.8",
+    "multer": "^2.0.2",
     "vue": "^3.5.25",
     "vue-router": "^4.6.4"
   },
